--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div class="row">
           <div class="col-sm-4" id="roul">
             <h3><a href="rouleurs.html">Les Rouleurs</a></h3>
-            <a href="rouleurs.html"><img src="images/noun_13828_cc.svg" width=200px></a>
+            <a href="rouleurs.html"><img src="images/noun_13828_cc.svg" width=200px class='catlink'></a>
           </div>
           <div class="col-sm-4" id="vol">
             <h3><a href="volants.html">Les Volants</a></h3>
-            <a href="volants.html"><img src="images/noun_42622.svg" width=200px></a>
+            <a href="volants.html"><img src="images/noun_42622.svg" width=200px class='catlink'></a>
           </div>
           <div class="col-sm-4" id="march">
             <h3><a href="marcheurs.html">Les Marcheurs</a></h3>
-            <a href="marcheurs.html"><img src="images/noun_79240_cc.svg" width=200px></a>
+            <a href="marcheurs.html"><img src="images/noun_79240_cc.svg" width=200px class='catlink'></a>
           </div>
         </div>
       </div>  
-    </div> 
+    </div>  
 
 
     <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
